--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <script type="Javascript">
-            window.location.replace(‘https://www.ExampleURL.com/’);
+            window.location.replace(‘https://ulissessigma.github.io/#/PageNotFound’);
         </script>
     </body>
 </html>
