--- a/404.html
+++ b/404.html
@@ -1,7 +1,9 @@
 <html>
     <body>
-        <script type="Javascript">
-            window.location.replace(‘https://ulissessigma.github.io/#/PageNotFound’);
+        <script type="javascript">
+            function replaceWindow(){
+                window.location.replace(‘https://ulissessigma.github.io/#/PageNotFound’);
+            }
         </script>
     </body>
 </html>
