:hammer: trying out how to recreate 404 static page for wildcards url for github pages.

--- a/public/404.html
+++ b/public/404.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html>
+    <head>
+    <link rel="stylesheet" href="404.css">
+    </head>
     <body>
-        <script type="javascript">
-            function replaceWindow(){
-                window.location.replace(‘https://ulissessigma.github.io/#/PageNotFound’);
-            }
-        </script>
+        <h1>This is a static 404 page</h1>
     </body>
 </html>
