:hammer: working on static page for default 404 github pages.

--- a/public/404.html
+++ b/public/404.html
@@ -4,6 +4,25 @@
     <link rel="stylesheet" href="404.css">
     </head>
     <body>
-        <h1>This is a static 404 page</h1>
+        <div class="App">
+            <div class="AppHeader">
+                <div class='AppHeaderMenu'>
+                    <a class="Button" href="#">Home</a>
+                </div>
+                <div class='AppHeaderBreadcrumb'>
+                    <span>
+                        Home > 404
+                    </span>
+                </div>
+            </div>
+            <div class="AppContainer">
+                <div class="SingleColumn">
+                    <h1>This is a static 404 page</h1>
+                </div>
+            </div>
+            <div class="AppFooter">
+                <p>this is a footer</p>
+            </div>
+        </div>
     </body>
 </html>
