--- a/public/404.html
+++ b/public/404.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link rel="stylesheet" href="404.css">
+        <link rel="stylesheet" href="404.css">
     </head>
     <body>
         <div class="App">
             <div class="AppHeader">
-                <div class='AppHeaderMenu'>
-                    <a class="Button" href="#">Home</a>
+                <div class="AppHeaderMenu">
+                    <a class="Button" href="https://ulissessigma.github.io/#/">Home</a>
                 </div>
-                <div class='AppHeaderBreadcrumb'>
-                    <span>
-                        Home > 404
-                    </span>
+                <div class="AppHeaderBreadcrumb">
+                    <span>Home > 404</span>
                 </div>
             </div>
+
             <div class="AppContainer">
                 <div class="SingleColumn">
-                    <h1>This is a static 404 page</h1>
+                    <img src="SadGuy.gif" alt="404 Page not found" />
+                    <h1>404 Page not found</h1>
                 </div>
             </div>
+
             <div class="AppFooter">
-                <p>this is a footer</p>
+                <p>You've met with a terrible fate, haven't you?</p>
             </div>
         </div>
     </body>
